--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div class='container'>
-    <div class='title'><h1>SketchPad</h1></div>
-    <div class="drawing-mode">Mode: Drawing</div>
+    <div class='title'><h1>SKETCH PAD</h1></div>
+    <div id="drawing-mode">Mode: Not Drawing</div>
     <div id='settings'>
       <button class='active' onclick="changeColor('#000000')">Black</button>
       <button onclick="changeColor('#FFFFFF')">Eraser</button>
